[project]
name = "tuneqdm"
version = "0.1.0"
description = "Memory-Efficient Fine-Tuning for Quantized Diffusion Model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "diffusers>=0.35.1",
    "pytorch-lightning>=2.5.5",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.2",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.7",
    "pytest>=9.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tuneqdm"]
